首先新增数据统计

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta content="新型肺炎信息导航" name="description">
 	  <meta content="新型肺炎，ncov，卫健委，导航" name="keywords">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>ncov-2019</title>
+    <title>新型冠状病毒疫情信息导航</title>
   </head>
   <body>
     <div id="app"></div>
